--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "^6.5.2",
+    "typescript": "^3.5.3",
     "zone.js": "^0.10.1"
   },
   "devDependencies": {
@@ -48,5 +49,9 @@
     "ts-node": "~8.3.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
+  },
+  "engines": {
+    "node": "12.7.0",
+    "npm": "6.10.0"
   }
 }
